--- a/app/src/main/res/layout/ri_ability.xml
+++ b/app/src/main/res/layout/ri_ability.xml
@@ -15,7 +15,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="10dp">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivAbilityIcon"
