Create Maps fragment, viewmodel, mapsUseCase

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="@string/menu_agents"
-        android:id="@+id/agents"
+        android:id="@+id/nav_home"
         android:icon="@drawable/ic_characters" />
     <item android:title="@string/menu_maps"
-        android:id="@+id/maps"
+        android:id="@+id/nav_map"
         android:icon="@drawable/ic_maps"/>
     <item android:title="@string/menu_weapons"
-        android:id="@+id/weapons"
+        android:id="@+id/nav_weapon"
         android:icon="@drawable/ic_gun"/>
     <item android:title="@string/menu_competitive"
-        android:id="@+id/competitive"
+        android:id="@+id/nav_competitive_tier"
         android:icon="@drawable/ic_rank"/>
 
 </menu>
