--- a/app/src/main/res/navigation/nav_weapon.xml
+++ b/app/src/main/res/navigation/nav_weapon.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_weapon">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_weapon"
+    app:startDestination="@id/weaponsFragment">
 
+    <fragment
+        android:id="@+id/weaponsFragment"
+        android:name="com.example.valorantapp.presentation.screen.weapons.WeaponsFragment"
+        android:label="fragment_weapons"
+        tools:layout="@layout/fragment_weapons" />
 </navigation>
