--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_map"
     app:startDestination="@id/mapsFragment">
 
     <fragment
         android:id="@+id/mapsFragment"
         android:name="com.example.valorantapp.presentation.screen.maps.MapsFragment"
-        android:label="MapsFragment" />
+        android:label="MapsFragment" >
+        <action
+            android:id="@+id/action_mapsFragment_to_mapDetailFragment"
+            app:destination="@id/mapDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mapDetailFragment"
+        android:name="com.example.valorantapp.presentation.screen.mapDetail.MapDetailFragment"
+        android:label="fragment_map_detail"
+        tools:layout="@layout/fragment_map_detail" >
+        <argument
+            android:name="mapUUID"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 </navigation>
