--- a/app/src/main/res/navigation/nav_weapon.xml
+++ b/app/src/main/res/navigation/nav_weapon.xml
@@ -9,5 +9,18 @@
         android:id="@+id/weaponsFragment"
         android:name="com.example.valorantapp.presentation.screen.weapons.WeaponsFragment"
         android:label="fragment_weapons"
-        tools:layout="@layout/fragment_weapons" />
+        tools:layout="@layout/fragment_weapons" >
+        <action
+            android:id="@+id/action_weaponsFragment_to_weaponDetailFragment"
+            app:destination="@id/weaponDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/weaponDetailFragment"
+        android:name="com.example.valorantapp.presentation.screen.weaponDetail.WeaponDetailFragment"
+        android:label="fragment_weapon_detail"
+        tools:layout="@layout/fragment_weapon_detail" >
+        <argument
+            android:name="weaponUuid"
+            app:argType="string" />
+    </fragment>
 </navigation>
