--- a/app/src/main/res/layout/fragment_weapon_detail.xml
+++ b/app/src/main/res/layout/fragment_weapon_detail.xml
@@ -223,7 +223,7 @@
                 <ImageView
                     android:id="@+id/ivWeaponSkin"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
                     loadImage="@{skin.displayIcon}"
